@@ -1,6 +1,7 @@
 dnsmasq (2.81-1) unstable; urgency=low
 
    * New upstream.
+   * Fix nodocs/nodoc confusion in rules. (closes: #922758)
 
  -- Simon Kelley <simon@thekelleys.org.uk>  Fri, 2 Nov 2018 23:08:25 +0000
 
